# morfessor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile
include/: Corpus.h  Lexicon.h  Model.h  Morph.h  Split.h  Types.h  corpus.h  lexicon.h  model.h  morph.h  morph_node.h  segmentation.h  split.h  types.h  viterbi.h
scripts/: evaluate.sh  morfessor-reference.perl  morpho-challenge-eval.perl
src/: Corpus.cpp  Lexicon.cpp  Model.cpp  Morph.cpp  Split.cpp  corpus.cc  lexicon.cc  model.cc  morfessor_main.cc  morph.cc  morph_node.cc  segmentation.cc  split.cc  viterbi.cc
testdata/: CorpusTestData.txt  SingleCorpusRow.txt  morpho-challenge-2005-goldstd-finnish.txt  morpho-challenge-2005-goldstd-turkish.txt  morpho-challenge-2005-testset-english.txt  test1.txt  test2.txt  test3.txt
tests/: CorpusTests.cpp  LexiconTests.cpp  ModelTests.cpp  MorphTests.cpp  SplitTests.cpp  corpus_loader.cc  corpus_loader.h  corpus_tests.cc  lexicon_tests.cc  model_tests.cc  morph_node_tests.cc  morph_tests.cc  segmentation_tests.cc  split_tests.cc
